crates/popcircles/src/snapshots/popcircles__report__tests__the_circle_document_holds_its_shape.snap
---
source: crates/popcircles/src/report.rs
expression: "Envelope::new(CircleReport::new(requested, cell, &grid, radius, population,\ntotal,))"
---
{
  "schema_version": 1,
  "document": "circle",
  "tool": "popcircles",
  "tool_version": "0.1.0",
  "earth_model": {
    "model": "sphere",
    "radius_km": 6371.0088
  },
  "result": {
    "requested": {
      "lat": 48.0,
      "lon": 11.0
    },
    "centre": {
      "lat": 45.0,
      "lon": 15.0
    },
    "row": 4,
    "col": 19,
    "radius_km": 1200.0,
    "population": 820.0,
    "total_population": 210276.0,
    "share_of_total": 0.0038996366679982498
  }
}
