crates/popcircles/src/snapshots/popcircles__report__tests__the_grid_document_holds_its_shape.snap
---
source: crates/popcircles/src/report.rs
expression: "Envelope::new(GridSummary::from(&grid))"
---
{
  "schema_version": 1,
  "document": "grid",
  "tool": "popcircles",
  "tool_version": "0.1.0",
  "earth_model": {
    "model": "sphere",
    "radius_km": 6371.0088
  },
  "result": {
    "width": 360,
    "height": 180,
    "origin": {
      "lat": 90.0,
      "lon": -180.0
    },
    "lon_step": 1.0,
    "lat_step": -1.0,
    "spans_full_turn": true,
    "middle_row_cell_area_km2": 12363.718145180046
  }
}
