crates/popcircles/src/snapshots/popcircles__report__tests__the_most_populous_document_holds_its_shape.snap
---
source: crates/popcircles/src/report.rs
expression: "Envelope::new(MostPopulousReport::new(&found, &grid, total))"
---
{
  "schema_version": 1,
  "document": "most-populous",
  "tool": "popcircles",
  "tool_version": "0.2.0",
  "earth_model": {
    "model": "sphere",
    "radius_km": 6371.0088
  },
  "result": {
    "centre": {
      "lat": -85.0,
      "lon": 75.0
    },
    "row": 17,
    "col": 25,
    "radius_km": 3000.0,
    "population": 55986.0,
    "total_population": 210276.0,
    "share_of_total": 0.2662500713348171,
    "tolerance_persons": 0.0,
    "stats": {
      "levels": 3,
      "blocks_examined": 369,
      "blocks_pruned": 269,
      "circles_evaluated": 100,
      "kernels_built": 29
    }
  }
}
